[package]
name = "no-op"
version = "0.1.0"
edition = "2021"
description = "A minimal no-op Rust binary optimized for fast startup."
license = "MIT"
repository = "https://github.com/SauersML/no-op"
homepage = "https://github.com/SauersML/no-op"
documentation = "https://github.com/SauersML/no-op"

[dependencies]

[profile.release]
# Abort on panic
panic = "abort"

# Optimize for maximum speed
opt-level = 3

# Enable Link-Time Optimization
lto = "fat"

# Use a single codegen unit
codegen-units = 1
